--- a/css/ui.css
+++ b/css/ui.css
@@ -1,3 +1,59 @@
+.normal {
+  margin: 0;
+  padding: 0;
+}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
 body {
+  background-color: #ffffff;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+#board {
+  margin: 0;
+  padding: 0;
+  height: auto;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+.writing-text {
+  font-family: sans-serif;
+  font-size: 11pt;
+}
+#editor {
+  background-color: #ffffff;
+  height: 100%;
+  padding: 10px;
+  overflow: hidden;
+  overflow-y: auto;
+  width: auto;
+  font-family: sans-serif;
+  font-size: 11pt;
+}
+#modules {
+  padding: 10px;
+  margin: 0px;
+  width: 350px;
+  float: right;
   background-color: #eeeeee;
+  height: 100%;
+}
+/* Styles for some special ui elements */
+#search-box {
+  background-color: #EEE;
+  width: 300px;
+  padding: 3px;
+  border: 1px solid #CCCCCC;
+  height: 20px;
+  border-radius: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 15px;
 }
