--- a/css/ui.less
+++ b/css/ui.less
@@ -1,5 +1,57 @@
+
 @bg-light: #EEEEEE;
+@bg-cream: #BBBBBB;
+@bg-white: #FFFFFF;
+
+.normal {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    .normal;
+    font-family: sans-serif;
+}
 
 body {
-    background-color: @bg-light;
+    background-color: @bg-white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    .normal;
 }
+
+#board {
+    .normal;
+    height: auto;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.writing-text {
+    font-family: sans-serif;
+    font-size: 11pt;
+}
+
+#editor {
+    background-color: @bg-white;
+    height: 100%;
+    padding: 10px;
+    overflow: hidden;
+    overflow-y: auto;
+    width: auto;
+    .writing-text;
+}
+
+#modules {
+    padding: 10px;
+    margin: 0px;
+    width: 350px;
+    float: right;
+    background-color: @bg-light;
+    height: 100%;
+    // text-align: center;
+}
+
+@import "ui-elements";
