--- a/css/ui-elements.less
+++ b/css/ui-elements.less
@@ -3,13 +3,16 @@
 
 // Search box styles, ephemeral, in the top of modules column
 #search-box {
-    background-color: #EEE;
-    width: 300px;
+    background-color: rgba(38, 38, 38, 1);
+    width: 100%;
     padding: 3px;
-    border: 1px solid #CCCCCC;
-    height: 20px;
-    border-radius: 50px;
+    border: 0px solid #CCCCCC;
+    height: 30px;
+    margin: 0px;
+    // border-radius: 50px;
     padding-left: 10px;
     padding-right: 10px;
-    margin-left: 15px;
+    // margin-left: 15px;
+    color: white;
+    
 }
