--- a/css/ui.css
+++ b/css/ui.css
@@ -1,25 +1,32 @@
 .normal {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: sans-serif;
+  outline: none;
+}
+html {
+  height: 100%;
 }
 body {
-  background-color: #ffffff;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  background: #ffffff;
+  min-height: 100%;
+  min-width: 100%;
+  overflow: hidden;
+  margin-bottom: -20px;
+  margin: 0px;
+  padding: 0px;
 }
 #board {
-  margin: 0;
-  padding: 0;
-  height: auto;
-  overflow: hidden;
+  margin: 0px;
+  padding: 0px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
   width: 100%;
   height: 100%;
 }
@@ -28,9 +35,10 @@ body {
   font-size: 11pt;
 }
 #editor {
-  background-color: #ffffff;
+  position: relative;
+  background: #eeeeee;
   height: 100%;
-  padding: 10px;
+  margin: 0px;
   overflow: hidden;
   overflow-y: auto;
   width: auto;
@@ -38,22 +46,33 @@ body {
   font-size: 11pt;
 }
 #modules {
-  padding: 10px;
+  position: relative;
+  padding: 0px;
   margin: 0px;
   width: 350px;
   float: right;
-  background-color: #eeeeee;
+  background: #333333;
   height: 100%;
+}
+#actionbar {
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  margin: 0;
+  padding: 0;
+  background: #000;
+  z-index: 200;
+  bottom: 0px;
 }
 /* Styles for some special ui elements */
 #search-box {
-  background-color: #EEE;
-  width: 300px;
+  background-color: #262626;
+  width: 100%;
   padding: 3px;
-  border: 1px solid #CCCCCC;
-  height: 20px;
-  border-radius: 50px;
+  border: 0px solid #CCCCCC;
+  height: 30px;
+  margin: 0px;
   padding-left: 10px;
   padding-right: 10px;
-  margin-left: 15px;
+  color: white;
 }
