--- a/css/ui.less
+++ b/css/ui.less
@@ -2,29 +2,42 @@
 @bg-light: #EEEEEE;
 @bg-cream: #BBBBBB;
 @bg-white: #FFFFFF;
+@bg-dark: rgba(51, 51, 51, 1);
+@bg-editor: @bg-light;
+@bg-modules: @bg-dark;
+
 
 .normal {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 * {
     .normal;
     font-family: sans-serif;
+    outline: none;
+}
+
+
+html {
+    height: 100%;
 }
 
 body {
-    background-color: @bg-white;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    background: @bg-white;
+    min-height: 100%;
+    min-width: 100%;
+    overflow: hidden;
+    margin-bottom: -20px;
     .normal;
 }
 
 #board {
     .normal;
-    height: auto;
-    overflow: hidden;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
     width: 100%;
     height: 100%;
 }
@@ -35,23 +48,39 @@ body {
 }
 
 #editor {
-    background-color: @bg-white;
+    position: relative;
+    background: @bg-editor;
     height: 100%;
-    padding: 10px;
+    margin: 0px;
     overflow: hidden;
     overflow-y: auto;
     width: auto;
+
     .writing-text;
 }
 
 #modules {
-    padding: 10px;
+    position: relative;
+    padding: 0px;
     margin: 0px;
     width: 350px;
     float: right;
-    background-color: @bg-light;
+    background: @bg-modules;
     height: 100%;
     // text-align: center;
 }
+
+#actionbar {
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+    background: #000;
+    z-index: 200;
+    bottom: 0px;
+}
+
+
 
 @import "ui-elements";
