--- a/css/ui-elements.less
+++ b/css/ui-elements.less
@@ -14,5 +14,60 @@
     padding-right: 10px;
     // margin-left: 15px;
     color: white;
-    
 }
+
+h2#title {
+    font-weight: normal;
+}
+
+
+.status-bar-elements {
+    margin-left: 10px;
+    color: #eee;
+    font-size: 0.75em;
+}
+
+#font-family-select {
+    .status-bar-elements;
+}
+
+#font-size-select {
+    .status-bar-elements;
+}
+
+#word-count-display {
+    .status-bar-elements;
+}
+
+
+.box-simple {
+    padding: 0.75rem;
+    box-shadow:0 1px 2px #aaa;
+    background:white;
+    margin: 0.5rem 0.5rem 0.5rem;
+    border-radius:3px;
+    user-select:none;
+    animation:fly-in-from-left .5s 1s ease both;
+    transform-origin:top left;
+    color: @font-light;
+}
+.card:nth-child(even){
+    animation-name:fly-in-from-right;
+    animation-delay:1.1s;
+    transform-origin:top right;
+}
+
+@keyframes fly-in-from-left {
+    from {
+        transform:translateY(15rem) rotate(15deg);
+        opacity:0;
+    }
+}
+
+@keyframes fly-in-from-right {
+    from {
+        transform:translateY(15rem) rotate(-15deg);
+        opacity:0;
+    }
+}
+
